--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,2 @@
 PORT = 3000
-DB_URL = mongodb://localhost:27017/Ecommerce
+DB_URL = mongodb+srv://marufhossain:IixTyUTAUMSrtFBu@clus3.t0gyl.mongodb.net/Ecommerce
